src/kubernetes/events-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-service
  namespace: cinemaabyss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: events-service
  template:
    metadata:
      labels:
        app: events-service
    spec:
      containers:
      - name: events-service
        image: ghcr.io/spinel/swa16-cinemaabyss/events:latest
        ports:
        - containerPort: 8082
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "300m"
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /api/events/health
            port: 8082
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /api/events/health
            port: 8082
          initialDelaySeconds: 15
          periodSeconds: 20
      imagePullSecrets:
      - name: dockerconfigsecret
---
apiVersion: v1
kind: Service
metadata:
  name: events-service
  namespace: cinemaabyss
spec:
  selector:
    app: events-service
  ports:
  - port: 8082
    targetPort: 8082
    name: http
  type: ClusterIP
