src/kubernetes/proxy-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-service
  namespace: cinemaabyss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy-service
  template:
    metadata:
      labels:
        app: proxy-service
    spec:
      containers:
      - name: proxy-service
        image: ghcr.io/spinel/swa16-cinemaabyss/proxy:latest
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "300m"
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /api/movies
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /api/movies
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 20
      imagePullSecrets:
      - name: dockerconfigsecret
---
apiVersion: v1
kind: Service
metadata:
  name: proxy-service
  namespace: cinemaabyss
spec:
  selector:
    app: proxy-service
  ports:
  - port: 8000
    targetPort: 8000
    name: http
  type: ClusterIP
